<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/selector_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/selector_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_ongoing"
        android:icon="@drawable/selector_ongoing"
        android:title="@string/ongoing" />
    <item
        android:id="@+id/nav_youtube"
        android:icon="@drawable/selector_youtube"
        android:title="@string/youtube" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/selector_settings"
        android:title="@string/settings" />
</menu>
